--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,12 +17,13 @@ jobs:
         uses: martinbeentjes/npm-get-version-action@v1.3.1
 
       - name: Build the Docker image
-        env:
-          PACKAGE_VERSION: ${{ steps.package-version.outputs.current-version}}
-          DOCKER_BUILDKIT: 1
+        # env:
+        #   DOCKER_BUILDKIT: 1
         run: docker buildx build --platform linux/amd64 --iidfile imagename .
 
       - name: Tag the Docker image
+        env:
+          PACKAGE_VERSION: ${{ steps.package-version.outputs.current-version}}
         run: |
           docker tag $(cat imagename) "ghcr.io/$(echo $GITHUB_REPOSITORY):$(echo $PACKAGE_VERSION)"
           docker tag $(cat imagename) "ghcr.io/$(echo $GITHUB_REPOSITORY):latest"
