--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,6 +34,8 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push Docker images
+        env:
+          PACKAGE_VERSION: ${{ steps.package-version.outputs.current-version}}
         run: |
           docker push "ghcr.io/$(echo $GITHUB_REPOSITORY):$(echo $PACKAGE_VERSION)"
           docker push "ghcr.io/$(echo $GITHUB_REPOSITORY):latest"
