--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,13 +15,12 @@ jobs:
       - name: get-npm-version
         id: package-version
         uses: martinbeentjes/npm-get-version-action@v1.3.1
+        run: export PACKAGE_VERSION=${{ steps.package-version.outputs.current-version}}
 
       - name: Build the Docker image
         run: docker buildx build --platform linux/amd64 --iidfile imagename .
 
       - name: Tag the Docker image
-        env:
-          PACKAGE_VERSION: ${{ steps.package-version.outputs.current-version}}
         run: |
           docker tag $(cat imagename) "ghcr.io/$(echo $GITHUB_REPOSITORY):$(echo $PACKAGE_VERSION)"
           docker tag $(cat imagename) "ghcr.io/$(echo $GITHUB_REPOSITORY):latest"
@@ -34,8 +33,6 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push Docker images
-        env:
-          PACKAGE_VERSION: ${{ steps.package-version.outputs.current-version}}
         run: |
           docker push "ghcr.io/$(echo $GITHUB_REPOSITORY):$(echo $PACKAGE_VERSION)"
           docker push "ghcr.io/$(echo $GITHUB_REPOSITORY):latest"
