--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,8 @@ jobs:
       - name: get-npm-version
         id: package-version
         uses: martinbeentjes/npm-get-version-action@v1.3.1
+
+      - name: Set package version as environment variable
         run: export PACKAGE_VERSION=${{ steps.package-version.outputs.current-version}}
 
       - name: Build the Docker image
