--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Set package version as environment variable
         run: |
-          echo "Package Version" ${{ steps.package-version.outputs.current-version}}
+          export PACKAGE_VERSION=${{ steps.package-version.outputs.current-version}}
 
       - name: Build the Docker image
         run: docker buildx build --platform linux/amd64 --iidfile imagename .
