--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Tag the Docker image
         run: |
-          docker tag $(cat imagename) "ghcr.io/$(echo $GITHUB_REPOSITORY):$(echo $PACKAGE_VERSION)"
-          docker tag $(cat imagename) "ghcr.io/$(echo $GITHUB_REPOSITORY):latest"
+          docker tag $(cat imagename) ghcr.io/$GITHUB_REPOSITORY:$PACKAGE_VERSION
+          docker tag $(cat imagename) ghcr.io/$GITHUB_REPOSITORY:latest"
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
