--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Set package version as environment variable
         run: |
-          export PACKAGE_VERSION=${{ steps.package-version.outputs.current-version}}
+          echo "{PACKAGE_VERSION}={${{ steps.package-version.outputs.current-version}}}" >> "$GITHUB_ENV"
 
       - name: Build the Docker image
         run: docker buildx build --platform linux/amd64 --iidfile imagename .
